compiler/tests/success/x86-64/stack_negative_length.jazz
param int N = -1;

export fn main () -> reg u64 {
  stack u64[N] s;
  reg u64 i res;
  i = 0;
  while (i <s N) {
    s[i] = i;
    i += 1;
  }
  res = 0;
  i = 0;
  while (i <s N) {
    res += s[i];
    i += 1;
  }
  return res;
}
